--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^7.1.0",
     "mocha": "^6.2.2"
   },
   "scripts": {
